// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPullRequest opens a pull request 1`] = `
Array [
  Array [
    Object {
      "base": "main",
      "body": "a-body.md",
      "head": "branch",
      "owner": "JasonEtco",
      "repo": "example",
      "title": "My pull request",
    },
  ],
]
`;

exports[`createPullRequest opens a pull request with comments 1`] = `
Array [
  Array [
    Object {
      "body": "a-comment.md",
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
  Array [
    Object {
      "body": "another-comment.md",
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;
